# practical-aspects-of-deep-learning

./: pyproject.toml
lab1/: lab1_imdb.ipynb  lab1_mnist.ipynb
lab2/: .gitignore  lab2_cnn_dogs.ipynb  lab2_cnn_dogs_dropout_augmentation.ipynb  lab2_cnn_mnist.ipynb
lab3/: lab3_transfer_learning.ipynb
lab6/: lab6_autoencoders.ipynb  lab6_convautoencoders.ipynb
